--- a/kaskad/production/utvh/hvo/currentParam-shkaf2.htm
+++ b/kaskad/production/utvh/hvo/currentParam-shkaf2.htm
@@ -147,13 +147,11 @@
 </head>
 <#Refresh Content=60>
 
-
-
 	<body>
 		<div class="current-param">
 			<h1 class="current-param__title">
 				<span class="current-param__title-span">УТВХ</span>
-				ХВО шкаф №1 №1
+				ХВО щит №2
 			</h1>
 			<div class="current-param__box">
 				<span class="current-param__date">
