--- a/kaskad/production/utvh/kotelnaya/mnemo-kotel1.htm
+++ b/kaskad/production/utvh/kotelnaya/mnemo-kotel1.htm
@@ -39,19 +39,90 @@
         </svg>
       </div>
       <div class="mnemo__modal-window">
-        <div class="modal-content__box">
-          <a class="modal-content__link" href="#" target="FrD">Схема проекта</a>
-          <div class="modal-content__link-container">
-            <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-            <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
-          </div>
+        <div class="modal__accordion">
+          <button class="modal__accordion-title">
+            Схемы проекта
+          </button>
+          <ul class="modal__accordion-content">
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Функциональная
+                схема</div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
+                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+              </div>
+            </li>
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Принципиальная схема
+              </div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
+                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+              </div>
+            </li>
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Структурная схема
+              </div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
+                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+              </div>
+            </li>
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Спецификация
+              </div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
+                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+              </div>
+            </li>
+          </ul>
         </div>
-        <div class="modal-content__box">
-          <a class="modal-content__link" href="#" target="FrD">Регламент объекта</a>
-          <div class="modal-content__link-container">
-            <a class="modal-content__link-download" href="#" download>Скачать Word</a>
-            <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
-          </div>
+        <div class="modal__accordion">
+          <button class="modal__accordion-title">
+            Программы проекта
+          </button>
+          <ul class="modal__accordion-content">
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Контроллер МК-500</div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download-solo" href="#" download>Скачать</a>
+              </div>
+            </li>
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Программа панели оператора DELTA
+              </div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download-solo" href="#" download>Скачать</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="modal__accordion">
+          <button class="modal__accordion-title">
+            Руководства по эксплуатации
+          </button>
+          <ul class="modal__accordion-content">
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Руководство АИР</div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download-solo" href="#" download>Скачать</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="modal__accordion">
+          <button class="modal__accordion-title">
+            Регламент объекта
+          </button>
+          <ul class="modal__accordion-content">
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Документация</div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download-solo" href="#" download>Скачать</a>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
