--- a/kaskad/production/utvh/hvo/currentParam-shkaf1.htm
+++ b/kaskad/production/utvh/hvo/currentParam-shkaf1.htm
@@ -7,405 +7,267 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="cache-control" content="no-cashe">
 	<title>Document</title>
-	<style>
-		body::-webkit-scrollbar {
-			width: 5px;
-			height: 5px;
-			/* ширина scrollbar */
-		}
-
-		body::-webkit-scrollbar-track {
-			background-color: #dfdcdc;
-			/* цвет дорожки */
-		}
-
-		body::-webkit-scrollbar-thumb {
-			background-color: green;
-			/* цвет плашки */
-			border-radius: 20px;
-			/* закругления плашки */
-		}
-
-		.tables {
-			display: flex;
-			justify-content: space-between;
-			flex-wrap: wrap;
-		}
-
-		.current-param {
-			/* max-width: 900px; */
-			margin-right: 15px;
-			background-color: #e7eef4;
-			box-shadow: 0 0 5px 1px black;
-
-
-			/* box-shadow: 2px 2px 10px rgb(0 0 0 / 20%); */
-
-			border-radius: 5px;
-		}
-
-		.current-param__title {
-			display: flex;
-			flex-direction: column;
-			margin-bottom: 10px;
-			margin-bottom: 0;
-			text-align: center;
-			font-size: 24px;
-			line-height: 30px;
-			font-weight: 700;
-			color: green;
-		}
-
-		.current-param__title-span {
-			font-size: 22px;
-			line-height: 30px;
-			font-weight: 600;
-			color: black;
-		}
-
-		.current-param__box {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
-
-		.current-param__date {
-			margin-right: 20px;
-			font-size: 22px;
-			line-height: 30px;
-			font-weight: 600;
-			color: black;
-		}
-
-		.current-param__time {
-			font-size: 22px;
-			line-height: 30px;
-			font-weight: 600;
-			color: black;
-
-		}
-
-		.table {
-			margin-top: 30px;
-			margin-right: 15px;
-			/* width: 900px; */
-			text-align: left;
-			border-collapse: collapse;
-			border-spacing: 5px;
-			background-color: #e7eef4;
-			box-shadow: 0 0 5px 0 black;
-		}
-
-		.table__title {
-			margin-bottom: 10px;
-			text-align: center;
-			font-size: 20px;
-			line-height: 25px;
-			font-weight: 700;
-			color: green;
-		}
-
-		.table__tr {
-			height: 30px;
-			border: 1px solid black;
-		}
-
-		.table__th {
-			text-align: center;
-			font-size: 18px;
-			line-height: 18px;
-			font-weight: 800;
-			color: black;
-		}
-
-		.table__td {
-			padding: 5px;
-			letter-spacing: 1px;
-			text-align: center;
-			font-size: 16px;
-			line-height: 16px;
-			font-weight: 500;
-			color: black;
-		}
-
-		.table__left {
-			padding: 10px;
-			padding-left: 30px;
-			text-align: left;
-		}
-
-		.table__right {
-			color: green;
-			font-weight: 600;
-		}
-
-		.table__th:not(:last-child),
-		.table__td:not(:last-child) {
-			border-right: 1px solid black;
-		}
-	</style>
+	<link rel="stylesheet" href="http://Techsite6/kaskad/css/currentParam-hvo.css">
 </head>
 <!-- <#Refresh Content=60> -->
 
-
-
-	<body>
-		<div class="current-param">
-			<h1 class="current-param__title">
-				<span class="current-param__title-span">УТВХ</span>
-				ХВО щит №1
-			</h1>
-			<div class="current-param__box">
-				<span class="current-param__date">
-					<#Date>
-				</span>
-				<span class="current-param__time">
-					<#Time>
-				</span>
-			</div>
+<body>
+	<div class="current-param">
+		<h1 class="current-param__title">
+			<span class="current-param__title-span">УТВХ</span>
+			ХВО щит №1
+		</h1>
+		<div class="current-param__box">
+			<span class="current-param__date">
+				<#Date>
+			</span>
+			<span class="current-param__time">
+				<#Time>
+			</span>
 		</div>
-		<div class="tables">
-			<table class="table">
-				<caption class="table__title">Давления</caption>
-				<thead class="table__thead">
-					<tr class="table__tr">
-						<th class="table__th">Наименование параметра</th>
-						<th class="table__th">Значение, кгс/см2</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Давление воды на входе установки
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=1 Precision=1>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Давление воды после насосов H1/1,2,3
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=2 Precision=1>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Давление воды после насосов H2/1,2
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=3 Precision=1>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Давление воды после насосов H3/1,2 для промывки
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=4 Precision=1>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<table class="table">
-				<caption class="table__title">Уровни</caption>
-				<thead class="table__thead">
-					<tr class="table__tr">
-						<th class="table__th">Наименование параметра</th>
-						<th class="table__th">Значение, мм</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Уровень воды в емкости E1/1
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=5 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Уровень воды в емкости E1/2
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=6 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Уровень воды в емкости E2/1,2
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=10 Precision=0>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<table class="table">
-				<caption class="table__title">Расходы</caption>
-				<thead class="table__thead">
-					<tr class="table__tr">
-						<th class="table__th">Наименование параметра</th>
-						<th class="table__th">Значение, м3/ч</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Расход воды на установку
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=7 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Расход воды на промывку фильтров
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=8 Precision=0>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<table class="table">
-				<caption class="table__title">Работа насосов</caption>
-				<thead class="table__thead">
-					<tr class="table__tr">
-						<th class="table__th">Наименование параметра</th>
-						<th class="table__th">Значение</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Выход РАН давления воды для ПЧ H1/1 (%)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=11 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Рабочая частота насоса H1/1 (Гц)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=12 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Выход РАН давления воды для ПЧ H1/2 (%)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=13 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Рабочая частота насоса H1/2 (Гц)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=14 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Выход РАН давления воды для ПЧ H2/1 (%)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=15 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Рабочая частота насоса H2/1 (Гц)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=16 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Выход РАН давления воды для ПЧ H2/2 (%)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=17 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Рабочая частота насоса H2/2 (Гц)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=18 Precision=0>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+	</div>
+	<div class="tables">
+		<table class="table">
+			<caption class="table__title">Давления</caption>
+			<thead class="table__thead">
+				<tr class="table__tr">
+					<th class="table__th">Наименование параметра</th>
+					<th class="table__th">Значение, кгс/см2</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Давление воды на входе установки
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=1 Precision=1>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Давление воды после насосов H1/1,2,3
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=2 Precision=1>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Давление воды после насосов H2/1,2
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=3 Precision=1>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Давление воды после насосов H3/1,2 для промывки
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=4 Precision=1>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<table class="table">
+			<caption class="table__title">Уровни</caption>
+			<thead class="table__thead">
+				<tr class="table__tr">
+					<th class="table__th">Наименование параметра</th>
+					<th class="table__th">Значение, мм</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Уровень воды в емкости E1/1
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=5 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Уровень воды в емкости E1/2
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=6 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Уровень воды в емкости E2/1,2
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=10 Precision=0>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<table class="table">
+			<caption class="table__title">Расходы</caption>
+			<thead class="table__thead">
+				<tr class="table__tr">
+					<th class="table__th">Наименование параметра</th>
+					<th class="table__th">Значение, м3/ч</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Расход воды на установку
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=7 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Расход воды на промывку фильтров
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=8 Precision=0>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<table class="table">
+			<caption class="table__title">Работа насосов</caption>
+			<thead class="table__thead">
+				<tr class="table__tr">
+					<th class="table__th">Наименование параметра</th>
+					<th class="table__th">Значение</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Выход РАН давления воды для ПЧ H1/1 (%)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=11 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Рабочая частота насоса H1/1 (Гц)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=12 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Выход РАН давления воды для ПЧ H1/2 (%)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=13 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Рабочая частота насоса H1/2 (Гц)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=14 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Выход РАН давления воды для ПЧ H2/1 (%)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=15 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Рабочая частота насоса H2/1 (Гц)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=16 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Выход РАН давления воды для ПЧ H2/2 (%)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=17 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Рабочая частота насоса H2/2 (Гц)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=18 Precision=0>
+					</td>
+				</tr>
+			</tbody>
+		</table>
 
-			<table class="table">
-				<caption class="table__title">Все остальное</caption>
-				<thead class="table__thead">
-					<tr class="table__tr">
-						<th class="table__th">Наименование параметра</th>
-						<th class="table__th">Значение</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Задание уровня воды в емкостях E1/1,2
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=19 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Задание рег-ру давления воды после H1/1,2
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=20 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Задание рег-ру давления воды после H2/1,2
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=21 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							Контроль положения ИМ1
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=9 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							УПД №1 (Шкаф №1)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=22 Precision=0>
-						</td>
-					</tr>
-					<tr class="table__tr">
-						<td class="table__td table__left">
-							УПД №2 (Шкаф №1)
-						</td>
-						<td class="table__td table__right">
-							<#PasspValue PasspType=1 PasspID=23 Precision=0>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</body>
+		<table class="table">
+			<caption class="table__title">Все остальное</caption>
+			<thead class="table__thead">
+				<tr class="table__tr">
+					<th class="table__th">Наименование параметра</th>
+					<th class="table__th">Значение</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Задание уровня воды в емкостях E1/1,2
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=19 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Задание рег-ру давления воды после H1/1,2
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=20 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Задание рег-ру давления воды после H2/1,2
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=21 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						Контроль положения ИМ1
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=9 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						УПД №1 (Шкаф №1)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=22 Precision=0>
+					</td>
+				</tr>
+				<tr class="table__tr">
+					<td class="table__td table__left">
+						УПД №2 (Шкаф №1)
+					</td>
+					<td class="table__td table__right">
+						<#PasspValue PasspType=1 PasspID=23 Precision=0>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</body>
 
 </html>
