add modal documents and hvo shkaf2

--- a/kaskad/production/utvh/kotelnaya/mnemo-kotel2.htm
+++ b/kaskad/production/utvh/kotelnaya/mnemo-kotel2.htm
@@ -46,96 +46,156 @@
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Общие данные</div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/common_data_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/common_data_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Структурная схема
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/structural_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/structural_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Принципиальная схема питания
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/power_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/power_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Функциональная схема
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
-              </div>
-            </li>
-            <li class="modal__accordion-content-item">
-              <div class="modal-content__link">Спецификация оборудования
-              </div>
-              <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/functional_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/functional_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Схема соединений запально-сигнализирующего устройства
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/zzu_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/zzu_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
-              <div class="modal-content__link">Принципиальная схема соединений контроллера
+              <div class="modal-content__link">Принципиальная схема соединений контроллера I
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/MK-500_first_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/MK-500_first_kotel2.pdf"
+                  download>Скачать PDF</a>
+              </div>
+            </li>
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Принципиальная схема соединений контроллера II
+              </div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/MK-500_second_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/MK-500_second_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Схема внешних соединений
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/external_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/external_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Щит КИПиА. Сборочный чертеж
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/assembly_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/assembly_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Схема конфигурации контроллера
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/configuration_MK-500_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/configuration_MK-500_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">План расположения оборудования и кабельных трасс
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/cable_track_plan_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/cable_track_plan_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Схема монтажных соединений
               </div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download" href="#" download>Скачать DWG</a>
-                <a class="modal-content__link-download" href="#" download>Скачать PDF</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/wiring_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/wiring_kotel2.pdf"
+                  download>Скачать PDF</a>
+              </div>
+            </li>
+            <li class="modal__accordion-content-item">
+              <div class="modal-content__link">Спецификация оборудования
+              </div>
+              <div class="modal-content__link-container">
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/specification_kotel2.dwg"
+                  download>Скачать DWG</a>
+                <a class="modal-content__link-download"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/schemes/specification_kotel2.pdf"
+                  download>Скачать PDF</a>
               </div>
             </li>
           </ul>
@@ -168,7 +228,9 @@
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Руководство АИР</div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download-solo" href="#" download>Скачать</a>
+                <a class="modal-content__link-download-solo"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/docs/re_air.pdf"
+                  download>Скачать</a>
               </div>
             </li>
           </ul>
@@ -181,7 +243,9 @@
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Документация</div>
               <div class="modal-content__link-container">
-                <a class="modal-content__link-download-solo" href="#" download>Скачать</a>
+                <a class="modal-content__link-download-solo"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/docs/kotel_de-10-14.pdf"
+                  download>Скачать</a>
               </div>
             </li>
           </ul>
