--- a/kaskad/production/utvh/kotelnaya/mnemo-kotel2.htm
+++ b/kaskad/production/utvh/kotelnaya/mnemo-kotel2.htm
@@ -39,7 +39,7 @@
 
       <ul class="mnemo__modal-window list-reset">
         <li class="modal__accordion">
-          <button class="modal__accordion-title">
+          <button class="modal__accordion-title ">
             Схемы проекта
           </button>
           <ul class="modal__accordion-content">
@@ -201,14 +201,31 @@
           </ul>
         </li>
         <li class="modal__accordion">
-          <button class="modal__accordion-title">
+          <button class="modal__accordion-title modal__accordion-title--form-kontroller">
             Программы проекта
           </button>
           <ul class="modal__accordion-content">
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Контроллер МК-500</div>
-              <div class="modal-content__link-container">
-                <a class="modal-content__link-download-solo" href="#" download>Скачать</a>
+              <form class="modal-content__form modal-content__form-kontroller">
+                <ul class="modal-content__form-list list-reset">
+                  <li class="modal-content__form-item">
+                    <input class="modal-content__form-input" type="password" id="kontroller-proga"
+                      placeholder="Введите пароль" name="kontroller-proga-password">
+                    <label class="modal-content__form-label" for="kontroller-proga">
+                      Неправильный пароль
+                    </label>
+                  </li>
+                </ul>
+                <button class="modal-content__form-btn modal-content__link-download-solo modal-content__form-btn--ok btn-reset"
+                  type="submit">Ок</button>
+              </form>
+              <div class="modal-content__link-container modal-content__link-container--display">
+                <a class="modal-content__link-download-solo download-password" href="#">Скачать</a>
+                <a class="modal-content__link-download-solo modal-content__form-btn--may"
+                  href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/docs/re_air.pdf"
+                  download>Теперь
+                  можно скачать</a>
               </div>
             </li>
             <li class="modal__accordion-content-item">
