add mnemo-hvo-1 current parameters and pumps js, mnemo-kotel password attempt

--- a/kaskad/production/utvh/kotelnaya/mnemo-kotel2.htm
+++ b/kaskad/production/utvh/kotelnaya/mnemo-kotel2.htm
@@ -207,32 +207,34 @@
           <ul class="modal__accordion-content">
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Контроллер МК-500</div>
-              <form class="modal-content__form modal-content__form-kontroller">
-                <ul class="modal-content__form-list list-reset">
-                  <li class="modal-content__form-item">
-                    <input class="modal-content__form-input" type="password" id="kontroller-proga"
-                      placeholder="Введите пароль" name="kontroller-proga-password">
-                    <label class="modal-content__form-label" for="kontroller-proga">
-                      Неправильный пароль
-                    </label>
-                  </li>
-                </ul>
-                <button class="modal-content__form-btn modal-content__link-download-solo modal-content__form-btn--ok btn-reset"
-                  type="submit">Ок</button>
-              </form>
-              <div class="modal-content__link-container modal-content__link-container--display">
-                <a class="modal-content__link-download-solo download-password" href="#">Скачать</a>
-                <a class="modal-content__link-download-solo modal-content__form-btn--may"
+              <div class="password-window password-window-mk500">
+                <form class="password-form password-form-mk500">
+                  <ul class="password-form-list list-reset">
+                    <li class="password-form-item">
+                      <input class="password-form-input password-input-mk500" type="password" id="password-mk500"
+                        placeholder="Введите пароль" name="password-MK500">
+                      <label class="password-form-label password-label-mk500" for="password-mk500">
+                        Неправильный пароль
+                      </label>
+                    </li>
+                  </ul>
+                  <button class="password-btn--ok pas btn-reset" type="submit">Ок</button>
+                </form>
+              </div>
+              <div class="modal-content__link-container password-form__link-mk500">
+                <a class="modal-content__link-download-solo download-password-mk500" href="#">Скачать</a>
+              </div>
+              <div><a class="modal-content__link-download-solo password-form-btn--mk500"
                   href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/docs/re_air.pdf"
                   download>Теперь
-                  можно скачать</a>
-              </div>
+                  можно скачать</a></div>
+
+
+
+
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Программа панели оператора DELTA
-              </div>
-              <div class="modal-content__link-container">
-                <a class="modal-content__link-download-solo" href="#" download>Скачать</a>
               </div>
             </li>
           </ul>
