password for documents kotelnaya

--- a/kaskad/production/utvh/kotelnaya/mnemo-kotel2.htm
+++ b/kaskad/production/utvh/kotelnaya/mnemo-kotel2.htm
@@ -207,27 +207,44 @@
           <ul class="modal__accordion-content">
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Контроллер МК-500</div>
-              <div class="password-window password-window-mk500">
+              <div class="password-window password-window-1">
+                <form class="password-form password-form-1">
+                  <div class="password-form__container">
+                    <input class="password-input password-input-1" type="password" placeholder="Введите пароль"
+                      id="password-1" name="password-1">
+                    <label class="password-label password-label-1" for="password-1">Неправильный пароль</label>
+                  </div>
+                  <button class="password-btn--ok btn-reset" type="submit">Ок</button>
+                </form>
+              </div>
+              <div class="modal-content__link-container download-password-1">
+                <a class="modal-content__link-download-solo" href="">Скачать</a>
+              </div>
+              <div class="modal-content__link-may download-content-1">
+                <a class="modal-content__link-download-solo" href="" download>Теперь можно скачать</a>
+              </div>
+
+
+
+              <!-- <div class="password-window password-window-mk500">
                 <form class="password-form password-form-mk500">
                   <ul class="password-form-list list-reset">
                     <li class="password-form-item">
-                      <input class="password-form-input password-input-mk500" type="password" id="password-mk500"
-                        placeholder="Введите пароль" name="password-MK500">
-                      <label class="password-form-label password-label-mk500" for="password-mk500">
+                      <input class="password-form-input password-input-mk500" type="password" id="password-1"
+                        placeholder="Введите пароль" name="password-1">
+                      <label class="password-form-label password-label-mk500" for="password-1">
                         Неправильный пароль
                       </label>
                     </li>
                   </ul>
-                  <button class="password-btn--ok pas btn-reset" type="submit">Ок</button>
+                  <button class="password-btn--ok ok-mk500 btn-reset" type="submit">Ок</button>
                 </form>
-              </div>
-              <div class="modal-content__link-container password-form__link-mk500">
-                <a class="modal-content__link-download-solo download-password-mk500" href="#">Скачать</a>
-              </div>
-              <div><a class="modal-content__link-download-solo password-form-btn--mk500"
+              </div> -->
+              <!-- <div class="modal-content__link-container password-may-mk500"><a
+                  class="modal-content__link-download-solo password-form-btn--mk500"
                   href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/docs/re_air.pdf"
                   download>Теперь
-                  можно скачать</a></div>
+                  можно скачать</a></div> -->
 
 
 
@@ -235,6 +252,24 @@
             </li>
             <li class="modal__accordion-content-item">
               <div class="modal-content__link">Программа панели оператора DELTA
+              </div>
+              <div class="modal-content__link-container">
+                <div class="password-window password-window-2">
+                  <form class="password-form password-form-2">
+                    <div class="password-form__container">
+                      <input class="password-input password-input-2" type="password" placeholder="Введите пароль"
+                        id="password-2" name="password-2">
+                      <label class="password-label password-label-2" for="password-2">Неправильный пароль</label>
+                    </div>
+                    <button class="password-btn--ok btn-reset" type="submit">Ок</button>
+                  </form>
+                </div>
+                <div class="modal-content__link-container download-password-2">
+                  <a class="modal-content__link-download-solo" href="">Скачать</a>
+                </div>
+                <div class="modal-content__link-may download-content-2">
+                  <a class="modal-content__link-download-solo" href="" download>Теперь можно скачать</a>
+                </div>
               </div>
             </li>
           </ul>
@@ -332,7 +367,6 @@
         </div>
       </div>
     </div>
-
     <div class="mnemo__kran-vert mnemo__kran-4 zapalnik">
       <div class="mnemo__kran-box">
         <div class="mnemo__triangle-1 mnemo__zapalnik-img mnemo__zapalnik-top">
