--- a/kaskad/production/utvh/hvo/mnemo-hvo1.htm
+++ b/kaskad/production/utvh/hvo/mnemo-hvo1.htm
@@ -87,7 +87,7 @@
     <div class="mnemo__param zadanie-uroven-e1-1-2">
       <span class="mnemo__param-text">
         <!-- <#PasspValue PasspType=1 PasspID=19 Precision=0> -->
-        500
+        50
       </span>
       <span class="mnemo__param-naimenov">%</span>
     </div>
@@ -117,7 +117,7 @@
     </div>
     <div class="mnemo__param n1-2-hz">
       <span class="mnemo__param-text">
-        <!-- <#PasspValue PasspType=1 PasspID=14 Precision=0> -->
+        <#PasspValue PasspType=1 PasspID=14 Precision=0>
       </span>
       <span class="mnemo__param-naimenov">Гц</span>
     </div>
@@ -220,7 +220,7 @@
       P перед фильтрами
     </p>
     <p class="mnemo__param-descr kontrol-im-1-text title-reset">
-      Контроль положения ИМ1
+      ИМ1
     </p>
     <p class="mnemo__param-descr davl-pered-f3-1-7-text title-reset">
       P перед Ф3/1-7
@@ -231,7 +231,6 @@
 
 
     <img class="mnemo__img" src="http://Techsite6/kaskad/images/hvo/hvo1.png">
-
     <!-- gifs -->
     <div class="mnemo__gif mnemo__gif-pump-1-1">
       <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/fan-run.gif" alt="img">
@@ -244,6 +243,34 @@
     </div>
     <div class="mnemo__gif mnemo__gif-pump-2-2">
       <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/fan-run.gif" alt="img">
+    </div>
+
+
+
+
+
+    <div class="mnemo__symbols">
+      <h3 class="mnemo__symbols-title title-reset">Условные обозначения</h3>
+      <div class="mnemo__symbols-item">
+        <div class="mnemo__symbols-name mnemo__symbols-name-1"></div>
+        <p class="mnemo__symbols-descr descr-reset">Вода исходная (речная)</p>
+      </div>
+      <div class="mnemo__symbols-item">
+        <div class="mnemo__symbols-name mnemo__symbols-name-2"></div>
+        <p class="mnemo__symbols-descr descr-reset">Вода промывки фильтров</p>
+      </div>
+      <div class="mnemo__symbols-item">
+        <div class="mnemo__symbols-name mnemo__symbols-name-3"></div>
+        <p class="mnemo__symbols-descr descr-reset">Канализация</p>
+      </div>
+      <div class="mnemo__symbols-item">
+        <div class="mnemo__symbols-name mnemo__symbols-name-4"></div>
+        <p class="mnemo__symbols-descr descr-reset">Вода осветленная</p>
+      </div>
+      <div class="mnemo__symbols-item">
+        <div class="mnemo__symbols-name mnemo__symbols-name-5"></div>
+        <p class="mnemo__symbols-descr descr-reset">Вода осветленная</p>
+      </div>
     </div>
   </div>
   <script src="http://Techsite6/kaskad/js/mnemo-hvo.js"></script>
