uroven, krani, fix

--- a/kaskad/production/utvh/hvo/mnemo-hvo1.htm
+++ b/kaskad/production/utvh/hvo/mnemo-hvo1.htm
@@ -42,14 +42,16 @@
     </div>
 
     <div class="mnemo__param uroven-e1-1">
-      <span class="mnemo__param-text">
+
+      <span class="mnemo__param-text e1-1-value">
         <#PasspValue PasspType=1 PasspID=5 Precision=0>
       </span>
       <span class="mnemo__param-naimenov">мм</span>
     </div>
 
-    <div class="mnemo__param uroven-e1-2">
-      <span class="mnemo__param-text">
+    <div class="mnemo__param uroven-e1-2 ">
+
+      <span class="mnemo__param-text e1-2-value">
         <#PasspValue PasspType=1 PasspID=6 Precision=0>
       </span>
       <span class="mnemo__param-naimenov">мм</span>
@@ -78,7 +80,7 @@
     </div>
 
     <div class="mnemo__param kontrol-im-1">
-      <span class="mnemo__param-text">
+      <span class="mnemo__param-text im1-value">
         <#PasspValue PasspType=1 PasspID=9 Precision=0>
       </span>
       <!-- <span class="mnemo__param-naimenov">кгс/м2</span> -->
@@ -110,7 +112,7 @@
 
     <div class="mnemo__param n1-2-percent">
       <span class="mnemo__param-text">
-      <!-- <#PasspValue PasspType=1 PasspID=13 Precision=0> -->
+        <!-- <#PasspValue PasspType=1 PasspID=13 Precision=0> -->
         20
       </span>
       <span class="mnemo__param-naimenov">%</span>
@@ -150,6 +152,23 @@
         5
       </span>
       <span class="mnemo__param-naimenov">Гц</span>
+    </div>
+
+    <!-- Емкость E1/1 -->
+    <div class="column column-e1-1">
+      <div class="column__box">
+        <span class="column__span span-e1-1">
+        </span>
+      </div>
+      <div class="column-e1-1__percent"></div>
+    </div>
+    <!-- Емкость E2/1 -->
+    <div class="column column-e1-2">
+      <div class="column__box">
+        <span class="column__span span-e1-2">
+        </span>
+      </div>
+      <div class="column-e1-2__percent"></div>
     </div>
 
     <!-- descriptions -->
@@ -231,6 +250,17 @@
 
 
     <img class="mnemo__img" src="http://Techsite6/kaskad/images/hvo/hvo1.png">
+
+    <!-- kran -->
+    <div class="mnemo__kran-gor mnemo__kran im1-kran">
+      <div class="mnemo__kran-box ">
+        <div class="mnemo__triangle-1-gor mnemo__im1-left">
+        </div>
+        <div class="mnemo__triangle-2-gor mnemo__im1-right">
+        </div>
+      </div>
+    </div>
+
     <!-- gifs -->
     <div class="mnemo__gif mnemo__gif-pump-1-1">
       <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/fan-run.gif" alt="img">
@@ -270,6 +300,14 @@
       <div class="mnemo__symbols-item">
         <div class="mnemo__symbols-name mnemo__symbols-name-5"></div>
         <p class="mnemo__symbols-descr descr-reset">Вода осветленная</p>
+      </div>
+      <div class="mnemo__symbols-item">
+        <div class="mnemo__symbols-name mnemo__symbols-name-6"></div>
+        <p class="mnemo__symbols-descr descr-reset">Вода такая 1</p>
+      </div>
+      <div class="mnemo__symbols-item">
+        <div class="mnemo__symbols-name mnemo__symbols-name-7"></div>
+        <p class="mnemo__symbols-descr descr-reset">Вода такая 2</p>
       </div>
     </div>
   </div>
