--- a/kaskad/production/utvh/kotelnaya/mnemo-kotel3.htm
+++ b/kaskad/production/utvh/kotelnaya/mnemo-kotel3.htm
@@ -16,6 +16,295 @@
       Котел №3
     </h2>
 
+    <div class="mnemo__modal-background modal-js">
+      <div class="mnemo__modal-active">
+        <div class="mnemo__modal-title">
+          <h2 class="mnemo__modal-title-text title-reset">Список документации</h2>
+          <button class="mnemo__modal-close btn-reset">
+            <svg class="mnemo__modal-btn-close-svg" width="30px" height="30px" viewBox="0 0 32 32">
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                <g id="Icon-Set" sketch:type="MSLayerGroup" transform="translate(-568.000000, -1087.000000)"
+                  fill="green">
+                  <path
+                    d="M584,1117 C576.268,1117 570,1110.73 570,1103 C570,1095.27 576.268,1089 584,1089 C591.732,1089 598,1095.27 598,1103 C598,1110.73 591.732,1117 584,1117 L584,1117 Z M584,1087 C575.163,1087 568,1094.16 568,1103 C568,1111.84 575.163,1119 584,1119 C592.837,1119 600,1111.84 600,1103 C600,1094.16 592.837,1087 584,1087 L584,1087 Z M589.717,1097.28 C589.323,1096.89 588.686,1096.89 588.292,1097.28 L583.994,1101.58 L579.758,1097.34 C579.367,1096.95 578.733,1096.95 578.344,1097.34 C577.953,1097.73 577.953,1098.37 578.344,1098.76 L582.58,1102.99 L578.314,1107.26 C577.921,1107.65 577.921,1108.29 578.314,1108.69 C578.708,1109.08 579.346,1109.08 579.74,1108.69 L584.006,1104.42 L588.242,1108.66 C588.633,1109.05 589.267,1109.05 589.657,1108.66 C590.048,1108.27 590.048,1107.63 589.657,1107.24 L585.42,1103.01 L589.717,1098.71 C590.11,1098.31 590.11,1097.68 589.717,1097.28 L589.717,1097.28 Z"
+                    id="cross-circle" sketch:type="MSShapeGroup">
+                  </path>
+                </g>
+              </g>
+            </svg>
+          </button>
+        </div>
+        <ul class="mnemo__modal-window list-reset">
+          <li class="modal__accordion">
+            <button class="modal__accordion-title ">
+              Схемы проекта
+            </button>
+            <ul class="modal__accordion-content">
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Общие данные</div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/common_data_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/common_data_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Структурная схема
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/structural_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/structural_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Принципиальная схема питания
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/power_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/power_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Функциональная схема
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/functional_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/functional_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Схема соединений запально-сигнализирующего устройства
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/zzu_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/zzu_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Принципиальная схема соединений контроллера I
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/MK-500_first_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/MK-500_first_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Принципиальная схема соединений контроллера II
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/MK-500_second_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/MK-500_second_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Схема внешних соединений
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/external_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/external_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Щит КИПиА. Сборочный чертеж
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/assembly_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/assembly_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Схема конфигурации контроллера
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/configuration_MK-500_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/configuration_MK-500_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">План расположения оборудования и кабельных трасс
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/cable_track_plan_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/cable_track_plan_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Схема монтажных соединений
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/wiring_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/wiring_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Спецификация оборудования
+                </div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/specification_kotel.dwg"
+                    download>Скачать DWG</a>
+                  <a class="modal-content__link-download"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/content/schemes/specification_kotel.pdf"
+                    download>Скачать PDF</a>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="modal__accordion">
+            <button class="modal__accordion-title modal__accordion-title--form-kontroller">
+              Программы проекта
+            </button>
+            <ul class="modal__accordion-content">
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Контроллер МК-500</div>
+                <div class="password-window password-window-1">
+                  <form class="password-form password-form-1">
+                    <div class="password-form__container">
+                      <input class="password-input password-input-1" type="password" placeholder="Введите пароль"
+                        id="password-1" name="password-1">
+                      <label class="password-label password-label-1" for="password-1">Неправильный пароль</label>
+                    </div>
+                    <button class="password-btn--ok btn-reset" type="submit">Ок</button>
+                  </form>
+                </div>
+                <div class="modal-content__link-container download-password-1">
+                  <a class="modal-content__link-download-solo" href="">Скачать</a>
+                </div>
+                <div class="modal-content__link-may download-content-1">
+                  <a class="modal-content__link-download-solo" href="" download>Теперь можно скачать</a>
+                </div>
+
+
+
+                <!-- <div class="password-window password-window-mk500">
+              <form class="password-form password-form-mk500">
+                <ul class="password-form-list list-reset">
+                  <li class="password-form-item">
+                    <input class="password-form-input password-input-mk500" type="password" id="password-1"
+                      placeholder="Введите пароль" name="password-1">
+                    <label class="password-form-label password-label-mk500" for="password-1">
+                      Неправильный пароль
+                    </label>
+                  </li>
+                </ul>
+                <button class="password-btn--ok ok-mk500 btn-reset" type="submit">Ок</button>
+              </form>
+            </div> -->
+                <!-- <div class="modal-content__link-container password-may-mk500"><a
+                class="modal-content__link-download-solo password-form-btn--mk500"
+                href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/docs/re_air.pdf"
+                download>Теперь
+                можно скачать</a></div> -->
+
+
+
+
+              </li>
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Программа панели оператора DELTA
+                </div>
+                <div class="modal-content__link-container">
+                  <div class="password-window password-window-2">
+                    <form class="password-form password-form-2">
+                      <div class="password-form__container">
+                        <input class="password-input password-input-2" type="password" placeholder="Введите пароль"
+                          id="password-2" name="password-2">
+                        <label class="password-label password-label-2" for="password-2">Неправильный пароль</label>
+                      </div>
+                      <button class="password-btn--ok btn-reset" type="submit">Ок</button>
+                    </form>
+                  </div>
+                  <div class="modal-content__link-container download-password-2">
+                    <a class="modal-content__link-download-solo" href="">Скачать</a>
+                  </div>
+                  <div class="modal-content__link-may download-content-2">
+                    <a class="modal-content__link-download-solo" href="" download>Теперь можно скачать</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="modal__accordion">
+            <button class="modal__accordion-title">
+              Руководства по эксплуатации
+            </button>
+            <ul class="modal__accordion-content">
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Руководство АИР</div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download-solo"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/docs/re_air.pdf"
+                    download>Скачать</a>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="modal__accordion">
+            <button class="modal__accordion-title">
+              Регламент объекта
+            </button>
+            <ul class="modal__accordion-content">
+              <li class="modal__accordion-content-item">
+                <div class="modal-content__link">Документация</div>
+                <div class="modal-content__link-container">
+                  <a class="modal-content__link-download-solo"
+                    href="http://Techsite6/kaskad/production/utvh/kotelnaya/modal-content/kotel2/docs/kotel_de-10-14.pdf"
+                    download>Скачать</a>
+                </div>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div class="mnemo">
 
       <!-- Названия -->
@@ -215,6 +504,13 @@
       <div class="mnemo__param-box--btns">
         <button class="mnemo__param-box--btn btn-reset hover-none-btn">
           Включить всплывающие подсказки
+        </button>
+      </div>
+
+      <!-- Кнопка модального окна -->
+      <div class="mnemo__modal-box--btns">
+        <button class="mnemo__modal-box--btn btn-modal">
+          Документация объекта
         </button>
       </div>
 
