--- a/kaskad/production/utvh/kotelnaya/mnemo-kotel1.htm
+++ b/kaskad/production/utvh/kotelnaya/mnemo-kotel1.htm
@@ -326,19 +326,25 @@
         <#PasspValue PasspType=2 PasspID=21 Type="Pictures" [true]="images\fire-gif.gif" [false]="images\none.gif">
       </div>
       <div class="mnemo__gif mnemo__gif-2 smoke-fan">
-        <#PasspValue PasspType=2 PasspID=22 Type="Pictures" [true]="images\fan-run.gif" [false]="images\fan-stop.png">
+        <#PasspValue PasspType=2 PasspID=22 Type="Pictures" [true]="images\ventilator.png"
+          [false]="images\ventilator-none.png">
       </div>
       <div class="mnemo__gif mnemo__gif-3 vent">
-        <#PasspValue PasspType=2 PasspID=23 Type="Pictures" [true]="images\fan-run.gif" [false]="images\fan-stop.png">
+        <#PasspValue PasspType=2 PasspID=23 Type="Pictures" [true]="images\ventilator.png"
+          [false]="images\ventilator-none.png">
       </div>
       <div class="mnemo__gif mnemo__gif-4 water-pump">
-        <#PasspValue PasspType=2 PasspID=19 Type="Pictures" [true]="images\fan-run.gif" [false]="images\fan-stop.png">
+        <#PasspValue PasspType=2 PasspID=19 Type="Pictures" [true]="images\ventilator.png"
+          [false]="images\ventilator-none.png">
       </div>
       <div class="mnemo__gif mnemo__gif-5 iskra-zapalnik">
         <#PasspValue PasspType=2 PasspID=11 Type="Pictures" [true]="images\iskra.gif" [false]="images\none.gif">
       </div>
       <div class="mnemo__gif mnemo__gif-6 fire-zapalnik">
         <#PasspValue PasspType=2 PasspID=20 Type="Pictures" [true]="images\fire-zapalnik.gif" [false]="images\none.gif">
+      </div>
+      <div class="mnemo__gif mnemo__gif-7 smoke-par">
+        <#PasspValue PasspType=2 PasspID=22 Type="Pictures" [true]="images\par.gif" [false]="images\none.gif">
       </div>
 
       <!-- Задвижки -->
