--- a/kaskad/production/utvh/hvo/mnemo-hvo1.htm
+++ b/kaskad/production/utvh/hvo/mnemo-hvo1.htm
@@ -263,16 +263,16 @@
 
     <!-- gifs -->
     <div class="mnemo__gif mnemo__gif-pump-1-1">
-      <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/fan-run.gif" alt="img">
+      <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/ventilator.png" alt="img">
     </div>
     <div class="mnemo__gif mnemo__gif-pump-1-2">
-      <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/fan-run.gif" alt="img">
+      <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/ventilator.png" alt="img">
     </div>
     <div class="mnemo__gif mnemo__gif-pump-2-1">
-      <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/fan-run.gif" alt="img">
+      <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/ventilator.png" alt="img">
     </div>
     <div class="mnemo__gif mnemo__gif-pump-2-2">
-      <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/fan-run.gif" alt="img">
+      <img class="mnemo__gif-img" src="http://Techsite6/kaskad/images/ventilator.png" alt="img">
     </div>
 
 
